SPX-292:Fix war pom.xml to exclude servlet-api JAR
Former-commit-id: 201cb5f5014f5fb3683ccb9125750f73ca32ea7d

--- a/war/pom.xml
+++ b/war/pom.xml
@@ -96,7 +96,8 @@
                         <groupId>user-management</groupId>
                         <artifactId>user-management</artifactId>
                         <excludes>
-			    <exclude>WEB-INF/lib/log4j-*.jar</exclude>                              
+			    <exclude>WEB-INF/lib/log4j-*.jar</exclude>  
+                            <exclude>WEB-INF/lib/servlet-api*.jar</exclude>
                         </excludes>
                     </overlay>
                 </overlays>
