--- a/core/pom.xml
+++ b/core/pom.xml
@@ -65,6 +65,18 @@
 			<version>3.8.1</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+		   <groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.10</version>
+			<scope>test</scope>
+																		        </dependency>
+																				          <dependency>
+																							             <groupId>org.scalatest</groupId>
+																											             <artifactId>scalatest_2.10</artifactId>
+																															             <version>2.1.3</version>
+																																			             <scope>test</scope>
+																																							         </dependency>
 		<!-- Tomcat dependency -->
 		<dependency>
 			<groupId>org.apache.tomcat.embed</groupId>
