--- a/war/src/main/resources/acume.conf
+++ b/war/src/main/resources/acume.conf
@@ -13,3 +13,4 @@ acume.cache.delete.firstbinpersistedtime $CLI_REPLACE_CACHEDELETEFIRSTBINPERSIST
 acume.cache.delete.lastbinpersistedtime $CLI_REPLACE_CACHEDELETELASTBINPERSISTEDTIME$
 acume.core.enableJDBCServer $CLI_REPLACE_COREENABLEJDBCSERVER$
 acume.core.app.config $CLI_REPLACE_ACUMECOREAPPCONFIG$
+acume.core.scheduler.schedulerpolicyclass com.guavus.acume.core.scheduler.VariableGranularitySchedulerPolicy 
