SPX-314: [acume] java.lang.NoSuchMethodError because of multiple version of guava in acume war.
Former-commit-id: 6e246b7cd5b79469fb83634d67767f237653ceff

--- a/war/pom.xml
+++ b/war/pom.xml
@@ -96,8 +96,9 @@
                         <groupId>user-management</groupId>
                         <artifactId>user-management</artifactId>
                         <excludes>
-			    <exclude>WEB-INF/lib/log4j-*.jar</exclude>  
+			    					 <exclude>WEB-INF/lib/log4j-*.jar</exclude>  
                             <exclude>WEB-INF/lib/servlet-api*.jar</exclude>
+									 <exclude>WEB-INF/lib/guava*.jar</exclude>
                         </excludes>
                     </overlay>
                 </overlays>
