SPX-320: Add binsource to glabal property level. There should be a provision of not configuring binsource in cubedefinition.xml.
Former-commit-id: 2b872ac4be47ec735df37cd74b2cd34eb842b692

--- a/war/src/main/resources/acume.conf
+++ b/war/src/main/resources/acume.conf
@@ -14,3 +14,4 @@ acume.cache.delete.lastbinpersistedtime $CLI_REPLACE_CACHEDELETELASTBINPERSISTED
 acume.core.enableJDBCServer $CLI_REPLACE_COREENABLEJDBCSERVER$
 acume.core.app.config $CLI_REPLACE_ACUMECOREAPPCONFIG$
 acume.core.scheduler.schedulerpolicyclass com.guavus.acume.core.scheduler.VariableGranularitySchedulerPolicy 
+acume.core.global.binsource default
