SPX-325: Added new cli properites in acume
Former-commit-id: ed0101174a9ae0b7bf8a8ca73946e66152e1a6b7

--- a/war/src/main/resources/acume.conf
+++ b/war/src/main/resources/acume.conf
@@ -13,5 +13,7 @@ acume.cache.delete.firstbinpersistedtime $CLI_REPLACE_CACHEDELETEFIRSTBINPERSIST
 acume.cache.delete.lastbinpersistedtime $CLI_REPLACE_CACHEDELETELASTBINPERSISTEDTIME$
 acume.core.enableJDBCServer $CLI_REPLACE_COREENABLEJDBCSERVER$
 acume.core.app.config $CLI_REPLACE_ACUMECOREAPPCONFIG$
-acume.core.scheduler.schedulerpolicyclass com.guavus.acume.core.scheduler.VariableGranularitySchedulerPolicy 
-acume.core.global.binsource default
+acume.core.scheduler.schedulerpolicyclass $CLI_REPLACE_CACHESCHEDULERPOLICY$
+acume.core.global.binsource $CLI_REPLACE_ACUMEBINSOURCE$
+acume.cache.backend.dbname	$CLI_REPLACE_CACHEDBNAME$
+acume.core.sql.query.engine	$CLI_REPLACE_COREQUERYENGINE$
