SPX-239: move to spark 1.2.
Former-commit-id: e5b024b96b31d41898c5835b159cac4bca0be1c8

--- a/core/pom.xml
+++ b/core/pom.xml
@@ -12,18 +12,14 @@
 	<artifactId>core</artifactId>
 	<version>0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
-	
+
 	<repositories>
 		<repository>
 			<id>Akka repository</id>
 			<url>http://repo.akka.io/releases</url>
 		</repository>
-    	<repository>
-        	<id>releases</id>
-        	<url>https://github.com/adatao/mvnrepos/raw/master/releases</url>
-    	</repository>
 	</repositories>
-	
+
 	<name>Acume Core</name>
 	<url>http://maven.apache.org</url>
 	<properties>
@@ -80,6 +76,18 @@
 			<version>3.8.1</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.10</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.scalatest</groupId>
+			<artifactId>scalatest_2.10</artifactId>
+			<version>2.1.3</version>
+			<scope>test</scope>
+		</dependency>
 		<!-- Tomcat dependency -->
 		<dependency>
 			<groupId>org.apache.tomcat.embed</groupId>
@@ -121,9 +129,9 @@
 					<artifactId>servlet-api</artifactId>
 				</exclusion>
 				<exclusion>
-             			   	<groupId>com.google.guava</groupId>
-                    			<artifactId>guava</artifactId>
-                		</exclusion>
+					<groupId>com.google.guava</groupId>
+					<artifactId>guava</artifactId>
+				</exclusion>
 				<exclusion>
 					<groupId>asm</groupId>
 					<artifactId>asm</artifactId>
@@ -171,9 +179,9 @@
 			<scope>provided</scope>
 			<exclusions>
 				<exclusion>
-                    <groupId>asm</groupId>
-                    <artifactId>asm</artifactId>
-            	</exclusion>
+					<groupId>asm</groupId>
+					<artifactId>asm</artifactId>
+				</exclusion>
 			</exclusions>
 		</dependency>
 		<!-- Rest Service dependencies end -->
@@ -191,7 +199,7 @@
 		<dependency> <!-- Spark dependency -->
 			<groupId>org.apache.spark</groupId>
 			<artifactId>spark-core_2.10</artifactId>
-			<version>1.1.0</version>
+			<version>1.2.0</version>
 			<scope>provided</scope>
 			<exclusions>
 				<exclusion>  <!-- declare the exclusion here -->
@@ -204,40 +212,61 @@
 				</exclusion>
 				<exclusion>
 					<groupId>hsqldb</groupId>
-  					<artifactId>hsqldb</artifactId>
+					<artifactId>hsqldb</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>javax.servlet</groupId>
+					<artifactId>servlet-api</artifactId>
 				</exclusion>
 			</exclusions>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.spark</groupId>
 			<artifactId>spark-sql_2.10</artifactId>
-			<version>1.1.0</version>
+			<version>1.2.0</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.spark</groupId>
 			<artifactId>spark-hive_2.10</artifactId>
-			<version>1.1.0</version>
+			<version>1.2.0</version>
 			<scope>provided</scope>
 		</dependency>
-		
+
 		<!-- Spark dependencies end -->
 		<dependency>
 			<groupId>org.apache.spark</groupId>
 			<artifactId>spark-hive-thriftserver_2.10</artifactId>
-			<version>1.1.0</version>
+			<version>1.2.0</version>
 			<scope>provided</scope>
-		</dependency>		
+			<exclusions>
+				<exclusion>
+					<groupId>javax.servlet</groupId>
+					<artifactId>servlet-api</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>
 		<dependency>
 			<groupId>com.guavus</groupId>
-        	<artifactId>QueryBuilder</artifactId>
-        	<version>0.1-SNAPSHOT</version>
+			<artifactId>QueryBuilder</artifactId>
+			<version>0.1-SNAPSHOT</version>
 		</dependency>
-		<!--dependency>
+		<dependency>
 			<groupId>com.guavus</groupId>
 			<artifactId>crux2.0</artifactId>
 			<version>0.1-SNAPSHOT</version>
-		</dependency-->
+			<scope>provided</scope>
+			<exclusions>
+				<exclusion>
+					<groupId>com.sun.jersey</groupId>
+					<artifactId>*</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>org.apache.hive</groupId>
+					<artifactId>*</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>
 	</dependencies>
 
 	<build>
