--- a/war/src/main/resources/acume.conf
+++ b/war/src/main/resources/acume.conf
@@ -13,3 +13,4 @@ acume.core.scheduler.schedulerpolicyclass $CLI_REPLACE_CACHESCHEDULERPOLICY$
 acume.core.global.binsource $CLI_REPLACE_ACUMEBINSOURCE$
 acume.cache.backend.dbname	$CLI_REPLACE_CACHEDBNAME$
 acume.core.sql.query.engine	$CLI_REPLACE_COREQUERYENGINE$
+acume.core.udf.configurationxml $CLI_REPLACE_COREUDFCONFIGURATIONXML$
