SPX-369: Support added for assigning pools to queries
Former-commit-id: 8ff9487cd4f644d96492c3d37ed61ed98a05051d

--- a/war/src/main/resources/acume.conf
+++ b/war/src/main/resources/acume.conf
@@ -13,3 +13,4 @@ acume.cache.delete.firstbinpersistedtime $CLI_REPLACE_CACHEDELETEFIRSTBINPERSIST
 acume.cache.delete.lastbinpersistedtime $CLI_REPLACE_CACHEDELETELASTBINPERSISTEDTIME$
 acume.core.enableJDBCServer $CLI_REPLACE_COREENABLEJDBCSERVER$
 acume.core.app.config $CLI_REPLACE_ACUMECOREAPPCONFIG$
+acume.cache.scheduler.policyclass	$CLI_REPLACE_SCHEDULERPOLICYCLASS$
