--- a/war/pom.xml
+++ b/war/pom.xml
@@ -10,6 +10,12 @@
 <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 </properties>
 <dependencies>
+    <dependency>
+        <groupId>javax.servlet</groupId>
+        <artifactId>servlet-api</artifactId>
+        <version>2.5</version>
+        <scope>provided</scope>
+    </dependency>
 <dependency>
 <groupId>com.guavus.acume</groupId>
 <artifactId>core</artifactId>
@@ -59,23 +65,23 @@
                                         <groupId>asm</groupId>
                                         <artifactId>asm</artifactId>
                                 </exclusion>
-				<exclusion>
-					<groupId>com.sun.jersey</groupId>
-					<artifactId>*</artifactId>
-				</exclusion>
-				<exclusion>
-                       			<groupId>org.slf4j</groupId>
-                        		<artifactId>log4j-over-slf4j</artifactId>
-                		</exclusion>
-                		<exclusion>
-                        		<groupId>org.apache.logging.log4j</groupId>
-                        		<artifactId>log4j-core</artifactId>
-                		</exclusion>
-                		<exclusion>
-                        		<groupId>log4j</groupId>
-                        		<artifactId>log4j</artifactId>
-                		</exclusion>
-                        </exclusions>
+                				<exclusion>
+                					<groupId>com.sun.jersey</groupId>
+                					<artifactId>*</artifactId>
+                				</exclusion>
+                				<exclusion>
+                               			<groupId>org.slf4j</groupId>
+                                		<artifactId>log4j-over-slf4j</artifactId>
+                        		</exclusion>
+                        		<exclusion>
+                                		<groupId>org.apache.logging.log4j</groupId>
+                                		<artifactId>log4j-core</artifactId>
+                        		</exclusion>
+                        		<exclusion>
+                                		<groupId>log4j</groupId>
+                                		<artifactId>log4j</artifactId>
+                        		</exclusion>
+                                </exclusions>
                 </dependency>
 <dependency>
 	<groupId>asm</groupId>
