ACU-15: Removing jasper jars
Former-commit-id: f701660cdef915cc7b181b49c7efb12d0213f7fb

--- a/core/pom.xml
+++ b/core/pom.xml
@@ -99,7 +99,7 @@
 			<artifactId>tomcat-embed-logging-juli</artifactId>
 			<version>${tomcat.version}</version>
 		</dependency>
-		<dependency>
+		<!--dependency>
 			<groupId>org.apache.tomcat.embed</groupId>
 			<artifactId>tomcat-embed-jasper</artifactId>
 			<version>${tomcat.version}</version>
@@ -113,7 +113,7 @@
 			<groupId>org.apache.tomcat</groupId>
 			<artifactId>tomcat-jasper-el</artifactId>
 			<version>${tomcat.version}</version>
-		</dependency>
+		</dependency-->
 		<dependency>
 			<groupId>org.apache.tomcat</groupId>
 			<artifactId>tomcat-jsp-api</artifactId>
