SPX-275: Correcting property name in confconstant
Former-commit-id: 35805f360da6abd6cf7e590b5cc4d3e44aa69a3b

--- a/war/src/main/resources/acume.conf
+++ b/war/src/main/resources/acume.conf
@@ -28,4 +28,4 @@ acume.scheduler.maxSegmentDuration	$CLI_REPLACE_SCHEDULERMAXSEGMENTDURATION$
 acume.max.query.log.record	$CLI_REPLACE_ACUMEMAXQUERYLOGRECORD$
 acume.scheduler.checkInterval	$CLI_REPLACE_SCHEDULERCHECKINTERVAL$
 acume.cache.default.cache.type	$CLI_REPLACE_ACUMEDEFAULTCACHETYPE$
-acume.cache.scheduler.policyclass	$CLI_REPLACE_SCHEDULERPOLICYCLASS$
+acume.core.querypoolpolicyclass	$CLI_REPLACE_SCHEDULERPOLICYCLASS$
