--- a/war/src/main/resources/acume.conf
+++ b/war/src/main/resources/acume.conf
@@ -1,30 +1,40 @@
-acume.cache.baselayer.businesscubexml $CLI_REPLACE_CACHEBASELAYERBUSINESSCUBEXML$
-acume.cache.core.variableretentionmap $CLI_REPLACE_CACHECOREVARIABLERETENTIONMAP$
-acume.cache.baselayer.storagetype $CLI_REPLACE_CACHEBASELAYERSTORAGETYPE$
-acume.core.global.timezone $CLI_REPLACE_CACHECORETIMEZONE$
-acume.cache.baselayer.cubedefinitionxml $CLI_REPLACE_CACHEBASELAYERCUBEDEFINITIONXML$
-acume.cache.execute.qltype $CLI_REPLACE_CACHEEXECUTEQLTYPE$
-acume.cache.rrcache.loader $CLI_REPLACE_CACHERRCACHELOADER$
-acume.cache.core.rrcacheconcurrenylevel $CLI_REPLACE_CACHECORERRCACHECONCURRENYLEVEL$
-acume.cache.core.rrcahcesize $CLI_REPLACE_CACHECORERRCAHCESIZE$
-acume.core.enableJDBCServer $CLI_REPLACE_COREENABLEJDBCSERVER$
-acume.core.app.config $CLI_REPLACE_ACUMECOREAPPCONFIG$
-acume.core.scheduler.schedulerpolicyclass $CLI_REPLACE_CACHESCHEDULERPOLICY$
-acume.core.global.binsource $CLI_REPLACE_ACUMEBINSOURCE$
-acume.cache.backend.dbname	$CLI_REPLACE_CACHEDBNAME$
-acume.core.sql.query.engine	$CLI_REPLACE_COREQUERYENGINE$
-acume.core.udf.configurationxml $CLI_REPLACE_COREUDFCONFIGURATIONXML$
+
+acume.super.user									$CLI_REPLACE_ACUMESUPERUSER$
+acume.resolver										$CLI_REPLACE_ACUMESPRINGRESOLVER$
+acume.max.query.log.record							$CLI_REPLACE_ACUMEMAXQUERYLOGRECORD$
+acume.cache.baselayer.businesscubexml 				$CLI_REPLACE_CACHEBASELAYERBUSINESSCUBEXML$
+acume.cache.baselayer.storagetype 					$CLI_REPLACE_CACHEBASELAYERSTORAGETYPE$
+acume.cache.baselayer.cubedefinitionxml 			$CLI_REPLACE_CACHEBASELAYERCUBEDEFINITIONXML$
+acume.cache.execute.qltype 							$CLI_REPLACE_CACHEEXECUTEQLTYPE$
+acume.cache.rrcache.loader 							$CLI_REPLACE_CACHERRCACHELOADER$
+acume.cache.core.rrcacheconcurrenylevel 			$CLI_REPLACE_CACHECORERRCACHECONCURRENYLEVEL$
+acume.cache.core.rrcahcesize 						$CLI_REPLACE_CACHECORERRCAHCESIZE$
+acume.cache.backend.dbname							$CLI_REPLACE_CACHEDBNAME$
+acume.cache.default.cache.type						$CLI_REPLACE_ACUMEDEFAULTCACHETYPE$
+acume.cache.core.timezonedbPath 					$CLI_REPLACE_TIMEZONEDBPATH$
+acume.cache.sql.corrector 							$CLI_REPLACE_SQLCORRECTOR$
+acume.cache.sql.parser 								$CLI_REPLACE_SQLPARSER$
+acume.cache.singleentity.cache.size 				$CLI_REPLACE_SINGLEENTITYCACHESIZE$
+acume.cache.type.config.classname 					$CLI_REPLACE_CACHETYPECONFIGCLASS$
+acume.core.global.timezone 							$CLI_REPLACE_CACHECORETIMEZONE$
+acume.core.enableJDBCServer 						$CLI_REPLACE_COREENABLEJDBCSERVER$
+acume.core.app.config 								$CLI_REPLACE_ACUMECOREAPPCONFIG$
+acume.core.scheduler.schedulerpolicyclass 			$CLI_REPLACE_CACHESCHEDULERPOLICY$
+acume.core.global.binsource 						$CLI_REPLACE_ACUMEBINSOURCE$
+acume.core.sql.query.engine							$CLI_REPLACE_COREQUERYENGINE$
+acume.core.udf.configurationxml 					$CLI_REPLACE_COREUDFCONFIGURATIONXML$
+acume.core.querypoolpolicyclass						$CLI_REPLACE_SCHEDULERPOLICYCLASS$
+acume.core.global.levelpolicymap 					$CLI_REPLACE_LEVELPOLICYMAP$
+acume.core.global.timeserieslevelpolicymap 			$CLI_REPLACE_TIMESERIESLEVELPOLICYMAP$
+acume.core.global.basegranularity 					$CLI_REPLACE_BASEGRANULARITY$
+acume.core.global.evictionpolicyclass 				$CLI_REPLACE_EVICTIONPOLICYCLASS$
+acume.core.disable.total.query 						$CLI_REPLACE_DISABLETOTALQUERY$ 							
 acume.scheduler.prefetchTaskRetryIntervalInMillis	$CLI_REPLACE_SCHEDULERPREFETCHTASKRETRYINTERVAL$
-acume.scheduler.threadPoolSize	$CLI_REPLACE_SCHEDULERTHREADPOOLSIZE$
-acume.super.user	$CLI_REPLACE_ACUMESUPERUSER$
-acume.resolver	$CLI_REPLACE_ACUMESPRINGRESOLVER$
-acume.scheduler.enable	$CLI_REPLACE_SCHEDULERENABLE$
-acume.insta.comboPoints	$CLI_REPLACE_INSTACOMBOPOINTS$
-acume.scheduler.variableRetentionMap	$CLI_REPLACE_SCHEDULERVARIABLERETENTIONMAP$
-acume.scheduler.variableRetentionCombinePoints	$CLI_REPLACE_SCHEDULERVARIABLERETENTIONCOMBINEPOINTS$
-acume.scheduler.queryPrefetchTaskNoOfRetries $CLI_REPLACE_SCHEDULERQUERYPREFETCHTASKNUMRETRIES$
-acume.scheduler.maxSegmentDuration	$CLI_REPLACE_SCHEDULERMAXSEGMENTDURATION$
-acume.max.query.log.record	$CLI_REPLACE_ACUMEMAXQUERYLOGRECORD$
-acume.scheduler.checkInterval	$CLI_REPLACE_SCHEDULERCHECKINTERVAL$
-acume.cache.default.cache.type	$CLI_REPLACE_ACUMEDEFAULTCACHETYPE$
-acume.core.querypoolpolicyclass	$CLI_REPLACE_SCHEDULERPOLICYCLASS$
+acume.scheduler.threadPoolSize						$CLI_REPLACE_SCHEDULERTHREADPOOLSIZE$
+acume.scheduler.enable								$CLI_REPLACE_SCHEDULERENABLE$
+acume.scheduler.variableRetentionMap				$CLI_REPLACE_SCHEDULERVARIABLERETENTIONMAP$
+acume.scheduler.variableRetentionCombinePoints		$CLI_REPLACE_SCHEDULERVARIABLERETENTIONCOMBINEPOINTS$
+acume.scheduler.queryPrefetchTaskNoOfRetries 		$CLI_REPLACE_SCHEDULERQUERYPREFETCHTASKNUMRETRIES$
+acume.scheduler.maxSegmentDuration					$CLI_REPLACE_SCHEDULERMAXSEGMENTDURATION$
+acume.scheduler.checkInterval						$CLI_REPLACE_SCHEDULERCHECKINTERVAL$
+acume.insta.comboPoints								$CLI_REPLACE_INSTACOMBOPOINTS$
