SPX-389: Correcting cli property name
Former-commit-id: 8e6a818fb28a796fc399e668762ea158bde43bf3

--- a/war/src/main/resources/acume.conf
+++ b/war/src/main/resources/acume.conf
@@ -7,7 +7,7 @@ acume.cache.baselayer.cubedefinitionxml 			$CLI_REPLACE_CACHEBASELAYERCUBEDEFINI
 acume.cache.execute.qltype 					$CLI_REPLACE_CACHEEXECUTEQLTYPE$
 acume.cache.rrcache.loader 					$CLI_REPLACE_CACHERRCACHELOADER$
 acume.cache.core.rrcacheconcurrenylevel 			$CLI_REPLACE_CACHECORERRCACHECONCURRENYLEVEL$
-acume.cache.core.rrcahcesize 				        $CLI_REPLACE_CACHECORERRCAHCESIZE$
+acume.cache.core.rrcachesize 				        $CLI_REPLACE_CACHECORERRCACHESIZE$
 acume.cache.backend.dbname					$CLI_REPLACE_CACHEDBNAME$
 acume.cache.default.cache.type					$CLI_REPLACE_ACUMEDEFAULTCACHETYPE$
 acume.cache.core.timezonedbPath 				$CLI_REPLACE_TIMEZONEDBPATH$
