SPX-432: master and app name properties added to spark.properties
Former-commit-id: 084bdd7a2b8ae4ff9045f60df70d0f8c46669b30

--- a/war/src/main/resources/spark.properties
+++ b/war/src/main/resources/spark.properties
@@ -1,3 +1,5 @@
 spark.scheduler.allocation.file /opt/tms/java/acume-war-atlas3.4/WEB-INF/classes/poolConfig.xml
 spark.scheduler.mode FAIR
 spark.yarn.queue        default
+spark.master	yarn-client
+spark.app.name	DEFAULT_NAME
