--- a/war/src/main/resources/spark.properties
+++ b/war/src/main/resources/spark.properties
@@ -1,4 +1,4 @@
-spark.scheduler.allocation.file /opt/tms/java/acume-war-atlas3.4/WEB-INF/classes/poolConfig.xml
+spark.scheduler.allocation.file	poolConfig.xml
 spark.scheduler.mode FAIR
 spark.yarn.queue        default
 spark.master	yarn-client
