--- a/war/pom.xml
+++ b/war/pom.xml
@@ -16,6 +16,16 @@
         <version>2.5</version>
         <scope>provided</scope>
     </dependency>
+    <dependency>
+    	<groupId>acume.pcsa</groupId>
+    	<artifactId>utility</artifactId>
+    	<version>0.1</version>
+	</dependency>
+    <dependency>
+    	<groupId>acume.pcsa</groupId>
+    	<artifactId>pcsaudf</artifactId>
+    	<version>0.1</version>
+	</dependency>
 <dependency>
 <groupId>com.guavus.acume</groupId>
 <artifactId>core</artifactId>
