--- a/war/src/main/resources/spark.properties
+++ b/war/src/main/resources/spark.properties
@@ -3,3 +3,7 @@ spark.scheduler.mode FAIR
 spark.yarn.queue        default
 spark.master	yarn-client
 spark.app.name	DEFAULT_NAME
+
+spark.sql.shuffle.partitions 20
+spark.sql.inMemoryColumnarStorage.partitionPruning true
+spark.sql.inMemoryColumnarStorage.compressed true
