ACU-95: Added queryTimeOut property to cli and gms
Former-commit-id: 5f34f478db043443dbba588cb48ec6f2a82a9291

--- a/war/src/main/resources/acume.conf
+++ b/war/src/main/resources/acume.conf
@@ -27,7 +27,8 @@ acume.core.global.levelpolicymap 				$CLI_REPLACE_LEVELPOLICYMAP$
 acume.core.global.timeserieslevelpolicymap 			$CLI_REPLACE_TIMESERIESLEVELPOLICYMAP$
 acume.core.global.basegranularity 				$CLI_REPLACE_BASEGRANULARITY$
 acume.core.global.evictionpolicyclass 				$CLI_REPLACE_EVICTIONPOLICYCLASS$
-acume.core.disable.total.query 					$CLI_REPLACE_DISABLETOTALQUERY$ 							
+acume.core.disable.total.query 					$CLI_REPLACE_DISABLETOTALQUERY$
+acume.core.query.timeout					$CLI_REPLACE_QUERYTIMEOUT$ 							
 acume.scheduler.prefetchTaskRetryIntervalInMillis		$CLI_REPLACE_SCHEDULERPREFETCHTASKRETRYINTERVAL$
 acume.scheduler.threadPoolSize					$CLI_REPLACE_SCHEDULERTHREADPOOLSIZE$
 acume.scheduler.enable						$CLI_REPLACE_SCHEDULERENABLE$
