ACU-7: Added acumeconf to thread local
Former-commit-id: 5c59385671b019c43d41c42ee652759256bf214f

--- a/war/src/main/resources/acume.conf
+++ b/war/src/main/resources/acume.conf
@@ -37,4 +37,5 @@ acume.scheduler.variableRetentionCombinePoints			$CLI_REPLACE_SCHEDULERVARIABLER
 acume.scheduler.queryPrefetchTaskNoOfRetries 			$CLI_REPLACE_SCHEDULERQUERYPREFETCHTASKNUMRETRIES$
 acume.scheduler.maxSegmentDuration				$CLI_REPLACE_SCHEDULERMAXSEGMENTDURATION$
 acume.scheduler.checkInterval					$CLI_REPLACE_SCHEDULERCHECKINTERVAL$
+acume.scheduler.query.timeout                           	$CLI_REPLACE_SCHEDULERQUERYTIMEOUT$
 acume.insta.comboPoints						$CLI_REPLACE_INSTACOMBOPOINTS$
