--- a/war/src/main/resources/acume.conf
+++ b/war/src/main/resources/acume.conf
@@ -29,6 +29,7 @@ acume.core.global.basegranularity 				$CLI_REPLACE_BASEGRANULARITY$
 acume.core.global.evictionpolicyclass 				$CLI_REPLACE_EVICTIONPOLICYCLASS$
 acume.core.disable.total.query 					$CLI_REPLACE_DISABLETOTALQUERY$
 acume.core.query.timeout					$CLI_REPLACE_QUERYTIMEOUT$ 							
+acume.core.classification.max.allowedQueries			$CLI_REPLACE_CLASSIFICATIONMAXALLOWEDQUERIES$
 acume.scheduler.prefetchTaskRetryIntervalInMillis		$CLI_REPLACE_SCHEDULERPREFETCHTASKRETRYINTERVAL$
 acume.scheduler.threadPoolSize					$CLI_REPLACE_SCHEDULERTHREADPOOLSIZE$
 acume.scheduler.enable						$CLI_REPLACE_SCHEDULERENABLE$
