ACU-403: Enable firing queries on non default db in thin client
Former-commit-id: 8abe41c991c45f473511f5f2a5a88dd782b55653

--- a/war/src/main/resources/acume.conf
+++ b/war/src/main/resources/acume.conf
@@ -14,3 +14,4 @@ acume.cache.delete.lastbinpersistedtime $CLI_REPLACE_CACHEDELETELASTBINPERSISTED
 acume.core.enableJDBCServer $CLI_REPLACE_COREENABLEJDBCSERVER$
 acume.core.app.config $CLI_REPLACE_ACUMECOREAPPCONFIG$
 acume.cache.scheduler.policyclass	$CLI_REPLACE_SCHEDULERPOLICYCLASS$
+acume.cache.backend.dbname $CLI_REPLACE_CACHEDBNAME$
