--- a/war/src/main/resources/acume.conf
+++ b/war/src/main/resources/acume.conf
@@ -40,3 +40,4 @@ acume.scheduler.maxSegmentDuration				$CLI_REPLACE_SCHEDULERMAXSEGMENTDURATION$
 acume.scheduler.checkInterval					$CLI_REPLACE_SCHEDULERCHECKINTERVAL$
 acume.scheduler.query.timeout                           	$CLI_REPLACE_SCHEDULERQUERYTIMEOUT$
 acume.insta.comboPoints						$CLI_REPLACE_INSTACOMBOPOINTS$
+acume.insta.availability.poll.interval                          $CLI_REPLACE_INSTAAVAILABILITYPOLLINTERVAL$
