ACU-405: Created Directory for acume app which can be used to keep disk cache files on hdfs.
Former-commit-id: c44737a4411e412dacbbf68c69abb65a5443b118

--- a/war/src/main/resources/acume.conf
+++ b/war/src/main/resources/acume.conf
@@ -41,3 +41,5 @@ acume.scheduler.checkInterval					$CLI_REPLACE_SCHEDULERCHECKINTERVAL$
 acume.scheduler.query.timeout                           	$CLI_REPLACE_SCHEDULERQUERYTIMEOUT$
 acume.insta.comboPoints						$CLI_REPLACE_INSTACOMBOPOINTS$
 acume.insta.availability.poll.interval                          $CLI_REPLACE_INSTAAVAILABILITYPOLLINTERVAL$
+acume.core.cache.base.directory					$CLI_REPLACE_CACHEBASEDIRECTORY$
+acume.core.cache.directory					$CLI_REPLACE_CACHE_DIRECTORY$
