ACU-13: Support for rolling of spark executor logs added in acume.
Former-commit-id: f7f499372b7b51d0b855541a54c8bf1b651316fe

--- a/war/src/main/resources/spark.properties
+++ b/war/src/main/resources/spark.properties
@@ -7,3 +7,4 @@ spark.app.name	DEFAULT_NAME
 spark.sql.shuffle.partitions 20
 spark.sql.inMemoryColumnarStorage.partitionPruning true
 spark.sql.inMemoryColumnarStorage.compressed true
+spark.executor.extraJavaOptions '-Dlog4j.configuration=log4j-executor.properties'
