ACU-418: Enable history server in spark.properties
Former-commit-id: a630b6c3291ef4399a44bfd7540af1f8b7a5188c

--- a/war/src/main/resources/spark.properties
+++ b/war/src/main/resources/spark.properties
@@ -8,3 +8,6 @@ spark.sql.shuffle.partitions 20
 spark.sql.inMemoryColumnarStorage.partitionPruning true
 spark.sql.inMemoryColumnarStorage.compressed true
 spark.executor.extraJavaOptions '-Dlog4j.configuration=log4j-executor.properties'
+
+spark.eventLog.enabled true
+spark.eventLog.dir hdfs:///spark/events/
