--- a/war/src/main/resources/acume.conf
+++ b/war/src/main/resources/acume.conf
@@ -16,3 +16,4 @@ acume.core.app.config $CLI_REPLACE_ACUMECOREAPPCONFIG$
 acume.cache.scheduler.policyclass	$CLI_REPLACE_SCHEDULERPOLICYCLASS$
 acume.cache.backend.dbname $CLI_REPLACE_CACHEDBNAME$
 acume.core.cache.use.insta  $CLI_REPLACE_acumeCoreCacheUseInsta$
+acume.core.udf.configurationxml $CLI_REPLACE_COREUDFCONFIGURATIONXML$
