RIX-3616: Adding support for secure LDAP
Former-commit-id: f8ef9970c4220a8aa419694680b2b168e2aa399b

--- a/war/src/main/resources/shiro.ini
+++ b/war/src/main/resources/shiro.ini
@@ -3,17 +3,44 @@
 # =======================
 
 [main]
+#Enable below Realm for SSO login
 #authcStrategy = com.guavus.rubix.user.shiro.CustomAuthenticatorStrategy
 #securityManager.authenticator.authenticationStrategy = $authcStrategy
 #pamRealm = com.guavus.rubix.user.shiro.PamRealm
 
-myRealm = com.guavus.acume.core.usermanagement.DefaultUserRealm
+#PAM based LDAP login
+#authenticator = com.guavus.rubix.user.shiro.FirstSuccessfulAuthenticator
+#ldapRealm = com.guavus.rubix.user.shiro.LdapRealm
+
+#Enable below for LDAP login
+
+# JNDI based LDAP login
+#authenticator = com.guavus.rubix.user.shiro.CheckLoginAuthenticator
+#contextFactory = org.apache.shiro.realm.ldap.JndiLdapContextFactory
+#contextFactory.url = $CLI_REPLACE_LDAPURL$
+#contextFactory.environment[search.group.name] = $CLI_REPLACE_LDAPSEARCHGROUPNAME$
+#jndiRealm = com.guavus.rubix.user.shiro.UmJndiLdapRealm
+#jndiRealm.contextFactory = $contextFactory
+#jndiRealm.userDnTemplate = $CLI_REPLACE_LDAPUSERDNTEMPLATE$
+
+#authcStrategy = org.apache.shiro.authc.pam.FirstSuccessfulStrategy
+#securityManager.authenticator = $authenticator
+#securityManager.authenticator.authenticationStrategy = $authcStrategy
+
+#Keep the below enabled for RGE and UI to work
+myRealm = com.guavus.rubix.usermanagement.DefaultUserRealm
+
 customSubjectFactory = com.guavus.rubix.user.shiro.RubixWebSubjectFactory
 securityManager.subjectFactory = $customSubjectFactory
+#securityManager.realms = $jndiRealm, $myRealm
 
-#cacheManager = org.apache.shiro.cache.ehcache.EhCacheManager
-#cacheManager.cacheManagerConfigFile = classpath:shiro-ehcache.xml
-#securityManager.cacheManager = $cacheManager
+cacheManager = org.apache.shiro.cache.ehcache.EhCacheManager
+cacheManager.cacheManagerConfigFile = classpath:shiro-ehcache.xml
+securityManager.cacheManager = $cacheManager
+
+#configure permission resolver
+globalPermissionResolver = com.guavus.rubix.permission.RubixPermissionResolver
+securityManager.authorizer.permissionResolver = $globalPermissionResolver
 
 #myRealm.connectionTimeout = 30000
 #myRealm.credentialsMatcher = $sha256Matcher
@@ -21,7 +48,7 @@ securityManager.subjectFactory = $customSubjectFactory
 
 [users]
 # The 'users' section is for simple deployments
-# when you only need a small number of statically-defined
+# when you only need a small number of statically-defined 
 # set of User accounts.
 
 [roles]
@@ -33,3 +60,5 @@ securityManager.subjectFactory = $customSubjectFactory
 # The 'urls' section is used for url-based security
 # in web applications.  We'll discuss this section in the
 # Web documentation
+
+
