ACU-436: Spark app name changed to acume
Former-commit-id: 6b0f2c88e8fa67fd460a73619084778d3a0ba090

--- a/war/src/main/resources/spark.properties
+++ b/war/src/main/resources/spark.properties
@@ -2,7 +2,7 @@ spark.scheduler.allocation.file	poolConfig.xml
 spark.scheduler.mode FAIR
 spark.yarn.queue        default
 spark.master	yarn-client
-spark.app.name	DEFAULT_NAME
+spark.app.name	acume
 
 spark.sql.shuffle.partitions 20
 spark.sql.inMemoryColumnarStorage.partitionPruning true
