ACU-448: Added properties for CLI
Former-commit-id: d13790a4ecef28b3fc0cf7b65e7caf501c78639e

--- a/war/src/main/resources/acume.conf
+++ b/war/src/main/resources/acume.conf
@@ -15,3 +15,4 @@ acume.core.enableJDBCServer $CLI_REPLACE_COREENABLEJDBCSERVER$
 acume.core.app.config $CLI_REPLACE_ACUMECOREAPPCONFIG$
 acume.cache.scheduler.policyclass	$CLI_REPLACE_SCHEDULERPOLICYCLASS$
 acume.cache.backend.dbname $CLI_REPLACE_CACHEDBNAME$
+acume.core.cache.use.insta  $CLI_REPLACE_acumeCoreCacheUseInsta$
