RIX-3616: Making default authentication thoough rubix db
Former-commit-id: 5ce23a70f8c587f2aafaa1a495ddcac137304521

--- a/war/src/main/resources/shiro.ini
+++ b/war/src/main/resources/shiro.ini
@@ -28,7 +28,7 @@
 #securityManager.authenticator.authenticationStrategy = $authcStrategy
 
 #Keep the below enabled for RGE and UI to work
-myRealm = com.guavus.rubix.usermanagement.DefaultUserRealm
+myRealm = com.guavus.acume.core.usermanagement.DefaultUserRealm
 
 customSubjectFactory = com.guavus.rubix.user.shiro.RubixWebSubjectFactory
 securityManager.subjectFactory = $customSubjectFactory
