RIX-3616: Making default authentication thoough rubix db
Former-commit-id: 400cfd81154cde497cc4c091649ade7ccb5f5991

--- a/war/src/main/resources/shiro.ini
+++ b/war/src/main/resources/shiro.ini
@@ -28,7 +28,7 @@
 #securityManager.authenticator.authenticationStrategy = $authcStrategy
 
 #Keep the below enabled for RGE and UI to work
-#myRealm = com.guavus.acume.core.usermanagement.DefaultUserRealm
+myRealm = com.guavus.acume.core.usermanagement.DefaultUserRealm
 
 customSubjectFactory = com.guavus.rubix.user.shiro.RubixWebSubjectFactory
 securityManager.subjectFactory = $customSubjectFactory
@@ -39,8 +39,8 @@ cacheManager.cacheManagerConfigFile = classpath:shiro-ehcache.xml
 securityManager.cacheManager = $cacheManager
 
 #configure permission resolver
-#globalPermissionResolver = com.guavus.rubix.permission.RubixPermissionResolver
-#securityManager.authorizer.permissionResolver = $globalPermissionResolver
+globalPermissionResolver = com.guavus.rubix.permission.RubixPermissionResolver
+securityManager.authorizer.permissionResolver = $globalPermissionResolver
 
 #myRealm.connectionTimeout = 30000
 #myRealm.credentialsMatcher = $sha256Matcher
