ACU-448: Added properties for CLI
Former-commit-id: d237e988330653532e0df5be62f689b7d09ee8a9

--- a/war/src/main/resources/acume.conf
+++ b/war/src/main/resources/acume.conf
@@ -17,3 +17,5 @@ acume.cache.scheduler.policyclass	$CLI_REPLACE_SCHEDULERPOLICYCLASS$
 acume.cache.backend.dbname $CLI_REPLACE_CACHEDBNAME$
 acume.core.cache.use.insta  $CLI_REPLACE_acumeCoreCacheUseInsta$
 acume.core.udf.configurationxml $CLI_REPLACE_COREUDFCONFIGURATIONXML$
+acume.core.global.binsource  $CLI_REPLACE_ACUMEBINSOURCE$
+acume.core.global.timeserieslevelpolicymap  $CLI_REPLACE_TIMESERIESLEVELPOLICYMAP$
