--- a/core/pom.xml
+++ b/core/pom.xml
@@ -260,6 +260,11 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+                <dependency>
+			<groupId>com.guavus</groupId>
+			<artifactId>attvaludf</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 
 	<build>
