ACU-448: Correcting acume.conf CLIs and GMS properties
Former-commit-id: b994b4b5d44a107a26af4901563299294121d16d

--- a/war/src/main/resources/acume.conf
+++ b/war/src/main/resources/acume.conf
@@ -1,21 +1,29 @@
-acume.cache.baselayer.businesscubexml $CLI_REPLACE_CACHEBASELAYERBUSINESSCUBEXML$
-acume.cache.core.variableretentionmap $CLI_REPLACE_CACHECOREVARIABLERETENTIONMAP$
-acume.cache.baselayer.instainstanceid $CLI_REPLACE_CACHEBASELAYERINSTAINSTANCEID$
-acume.cache.baselayer.storagetype $CLI_REPLACE_CACHEBASELAYERSTORAGETYPE$
-acume.cache.core.timezone $CLI_REPLACE_CACHECORETIMEZONE$
-acume.cache.baselayer.instabase $CLI_REPLACE_CACHEBASELAYERINSTABASE$
-acume.cache.baselayer.cubedefinitionxml $CLI_REPLACE_CACHEBASELAYERCUBEDEFINITIONXML$
-acume.cache.execute.qltype $CLI_REPLACE_CACHEEXECUTEQLTYPE$
-acume.cache.rrcache.loader $CLI_REPLACE_CACHERRCACHELOADER$
-acume.cache.core.rrcacheconcurrenylevel $CLI_REPLACE_CACHECORERRCACHECONCURRENYLEVEL$
-acume.cache.core.rrcahcesize $CLI_REPLACE_CACHECORERRCAHCESIZE$
-acume.cache.delete.firstbinpersistedtime $CLI_REPLACE_CACHEDELETEFIRSTBINPERSISTEDTIME$
-acume.cache.delete.lastbinpersistedtime $CLI_REPLACE_CACHEDELETELASTBINPERSISTEDTIME$
-acume.core.enableJDBCServer $CLI_REPLACE_COREENABLEJDBCSERVER$
-acume.core.app.config $CLI_REPLACE_ACUMECOREAPPCONFIG$
-acume.cache.scheduler.policyclass	$CLI_REPLACE_SCHEDULERPOLICYCLASS$
-acume.cache.backend.dbname $CLI_REPLACE_CACHEDBNAME$
-acume.core.cache.use.insta  $CLI_REPLACE_acumeCoreCacheUseInsta$
-acume.core.udf.configurationxml $CLI_REPLACE_COREUDFCONFIGURATIONXML$
-acume.core.global.binsource  $CLI_REPLACE_ACUMEBINSOURCE$
-acume.core.global.timeserieslevelpolicymap  $CLI_REPLACE_TIMESERIESLEVELPOLICYMAP$
+acume.super.user						$CLI_REPLACE_ACUMESUPERUSER$
+acume.resolver							$CLI_REPLACE_ACUMESPRINGRESOLVER$
+acume.max.query.log.record					$CLI_REPLACE_ACUMEMAXQUERYLOGRECORD$
+acume.cache.baselayer.businesscubexml 				$CLI_REPLACE_CACHEBASELAYERBUSINESSCUBEXML$
+acume.cache.baselayer.storagetype				$CLI_REPLACE_CACHEBASELAYERSTORAGETYPE$
+acume.cache.baselayer.cubedefinitionxml 			$CLI_REPLACE_CACHEBASELAYERCUBEDEFINITIONXML$
+acume.cache.execute.qltype 					$CLI_REPLACE_CACHEEXECUTEQLTYPE$
+acume.cache.rrcache.loader 					$CLI_REPLACE_CACHERRCACHELOADER$
+acume.cache.core.rrcacheconcurrenylevel 			$CLI_REPLACE_CACHECORERRCACHECONCURRENYLEVEL$
+acume.cache.core.rrcachesize 				        $CLI_REPLACE_CACHECORERRCACHESIZE$
+acume.cache.backend.dbname					$CLI_REPLACE_CACHEDBNAME$
+acume.cache.core.timezonedbPath 				$CLI_REPLACE_TIMEZONEDBPATH$
+acume.cache.sql.corrector 					$CLI_REPLACE_SQLCORRECTOR$
+acume.cache.sql.parser 						$CLI_REPLACE_SQLPARSER$
+acume.cache.delete.firstbinpersistedtime                        $CLI_REPLACE_CACHEDELETEFIRSTBINPERSISTEDTIME$
+acume.cache.delete.lastbinpersistedtime                         $CLI_REPLACE_CACHEDELETELASTBINPERSISTEDTIME$
+acume.core.global.timezone 					$CLI_REPLACE_CACHECORETIMEZONE$
+acume.core.enableJDBCServer 					$CLI_REPLACE_COREENABLEJDBCSERVER$
+acume.core.app.config 						$CLI_REPLACE_ACUMECOREAPPCONFIG$
+acume.core.global.binsource 					$CLI_REPLACE_ACUMEBINSOURCE$
+acume.core.sql.query.engine					$CLI_REPLACE_COREQUERYENGINE$
+acume.core.udf.configurationxml 				$CLI_REPLACE_COREUDFCONFIGURATIONXML$
+acume.core.global.timeserieslevelpolicymap 			$CLI_REPLACE_TIMESERIESLEVELPOLICYMAP$ 
+acume.core.disable.total.query 					$CLI_REPLACE_DISABLETOTALQUERY$
+acume.core.query.timeout					$CLI_REPLACE_QUERYTIMEOUT$ 							
+acume.core.classification.max.allowedQueries			$CLI_REPLACE_CLASSIFICATIONMAXALLOWEDQUERIES$
+acume.core.cache.base.directory					$CLI_REPLACE_CACHEBASEDIRECTORY$
+acume.core.cache.directory					$CLI_REPLACE_CACHEDIRECTORY$
+acume.core.cache.use.insta                                      $CLI_REPLACE_ACUMECORECACHEUSEINSTA$
