--- a/core/pom.xml
+++ b/core/pom.xml
@@ -222,7 +222,7 @@
 		<dependency>
 			<groupId>org.apache.spark</groupId>
 			<artifactId>spark-sql_2.10</artifactId>
-			<version>1.2.1</version>
+			<version>1.2.1-1a</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
