ACU-492:Removing jasper jars for UI to work
Former-commit-id: 71fabf4375636473bc19cf5e5579891326f0f30c

--- a/war/pom.xml
+++ b/war/pom.xml
@@ -16,6 +16,13 @@
         <version>2.5</version>
         <scope>provided</scope>
     </dependency>
+    <dependency>
+        <groupId>tomcat</groupId>
+        <artifactId>jasper-compiler</artifactId>
+        <version>5.5.23</version>
+        <scope>provided</scope>
+    </dependency>
+
 <dependency>
 <groupId>com.guavus.acume</groupId>
 <artifactId>core</artifactId>
@@ -105,6 +112,7 @@
 			    					 <exclude>WEB-INF/lib/log4j-*.jar</exclude>  
                             <exclude>WEB-INF/lib/servlet-api*.jar</exclude>
 									 <exclude>WEB-INF/lib/guava*.jar</exclude>
+                                     <exclude>WEB-INF/lib/jasper-compiler*.jar</exclude>
                         </excludes>
                     </overlay>
                 </overlays>
