RIX-3642: Making Ldap configs as default
Former-commit-id: 40deb33ab0cc4bbb8090c7c2b6a2d9d8e23cf60a

--- a/war/src/main/resources/shiro.ini
+++ b/war/src/main/resources/shiro.ini
@@ -15,24 +15,23 @@
 #Enable below for LDAP login
 
 # JNDI based LDAP login
-#authenticator = com.guavus.rubix.user.shiro.CheckLoginAuthenticator
-#contextFactory = org.apache.shiro.realm.ldap.JndiLdapContextFactory
-#contextFactory.url = $CLI_REPLACE_LDAPURL$
-#contextFactory.environment[search.group.name] = $CLI_REPLACE_LDAPSEARCHGROUPNAME$
-#jndiRealm = com.guavus.rubix.user.shiro.UmJndiLdapRealm
-#jndiRealm.contextFactory = $contextFactory
-#jndiRealm.userDnTemplate = $CLI_REPLACE_LDAPUSERDNTEMPLATE$
-
-#authcStrategy = org.apache.shiro.authc.pam.FirstSuccessfulStrategy
-#securityManager.authenticator = $authenticator
-#securityManager.authenticator.authenticationStrategy = $authcStrategy
+authenticator = com.guavus.rubix.user.shiro.CheckLoginAuthenticator
+contextFactory = org.apache.shiro.realm.ldap.JndiLdapContextFactory
+contextFactory.url = $CLI_REPLACE_LDAPURL$
+contextFactory.environment[search.group.name] = $CLI_REPLACE_LDAPSEARCHGROUPNAME$
+jndiRealm = com.guavus.rubix.user.shiro.UmJndiLdapRealm
+jndiRealm.contextFactory = $contextFactory
+jndiRealm.userDnTemplate = $CLI_REPLACE_LDAPUSERDNTEMPLATE$
+authcStrategy = org.apache.shiro.authc.pam.FirstSuccessfulStrategy
+securityManager.authenticator = $authenticator
+securityManager.authenticator.authenticationStrategy = $authcStrategy
 
 #Keep the below enabled for RGE and UI to work
 myRealm = com.guavus.acume.core.usermanagement.DefaultUserRealm
 
 customSubjectFactory = com.guavus.rubix.user.shiro.RubixWebSubjectFactory
 securityManager.subjectFactory = $customSubjectFactory
-#securityManager.realms = $jndiRealm, $myRealm
+securityManager.realms = $myRealm, $jndiRealm
 
 cacheManager = org.apache.shiro.cache.ehcache.EhCacheManager
 cacheManager.cacheManagerConfigFile = classpath:shiro-ehcache.xml
