ACU-492: Removing jasper-runtime jar from classpath
Former-commit-id: 02c8f8236814e789a712238f9a520e14e31aaa6c

--- a/war/pom.xml
+++ b/war/pom.xml
@@ -22,6 +22,12 @@
         <version>5.5.23</version>
         <scope>provided</scope>
     </dependency>
+    <dependency>
+        <groupId>tomcat</groupId>
+        <artifactId>jasper-runtime</artifactId>
+        <version>5.5.23</version>
+        <scope>provided</scope>
+    </dependency>
 
 <dependency>
 <groupId>com.guavus.acume</groupId>
@@ -113,6 +119,7 @@
                             <exclude>WEB-INF/lib/servlet-api*.jar</exclude>
 									 <exclude>WEB-INF/lib/guava*.jar</exclude>
                                      <exclude>WEB-INF/lib/jasper-compiler*.jar</exclude>
+                                     <exclude>WEB-INF/lib/jasper-runtime*.jar</exclude>
                         </excludes>
                     </overlay>
                 </overlays>
