ACU-456: Queue name made configurable
Former-commit-id: 8199e0335967ba92972ddc89d1dd289c2252eb9b

--- a/war/src/main/resources/spark.properties
+++ b/war/src/main/resources/spark.properties
@@ -1,6 +1,6 @@
 spark.scheduler.allocation.file	poolConfig.xml
 spark.scheduler.mode FAIR
-spark.yarn.queue        default
+spark.yarn.queue        $CLI_REPLACE_ACUMEAPPQUEUENAME$
 spark.master	yarn-client
 spark.app.name	DEFAULT_NAME
 
