--- a/core/pom.xml
+++ b/core/pom.xml
@@ -147,6 +147,10 @@
 					<artifactId>log4j-over-slf4j</artifactId>
 				</exclusion>
 				<exclusion>
+					<groupId>ch.qos.logback</groupId>
+					<artifactId>logback-*</artifactId>
+				</exclusion>
+				<exclusion>
 					<groupId>org.apache.logging.log4j</groupId>
                         		<artifactId>log4j-core</artifactId>
                 		</exclusion>
