--- a/war/src/main/resources/spark.properties
+++ b/war/src/main/resources/spark.properties
@@ -8,6 +8,6 @@ spark.sql.shuffle.partitions 20
 spark.sql.inMemoryColumnarStorage.partitionPruning true
 spark.sql.inMemoryColumnarStorage.compressed true
 spark.executor.extraJavaOptions '-Dlog4j.configuration=log4j-executor.properties'
-
+spark.sql.parquet.cacheMetadata true 
 spark.eventLog.enabled true
 spark.eventLog.dir hdfs:///spark/events/
