--- a/core/pom.xml
+++ b/core/pom.xml
@@ -29,6 +29,7 @@
 		<maven.compiler.target>1.8</maven.compiler.target>
 		<tomcat.version>7.0.34</tomcat.version>
 		<jersey-version>1.8</jersey-version>
+		<aspectj.version>1.8.3</aspectj.version>
 		<org.springframework.version>4.1.4.RELEASE</org.springframework.version>
 	</properties>
 	<dependencies>
@@ -236,6 +237,18 @@
 			<scope>provided</scope>
 		</dependency>
 
+		<!-- AspectJ -->
+		<dependency>
+			<groupId>org.aspectj</groupId>
+			<artifactId>aspectjrt</artifactId>
+			<version>${aspectj.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.aspectj</groupId>
+			<artifactId>aspectjtools</artifactId>
+			<version>${aspectj.version}</version>
+		</dependency>
+
 		<!-- Spark dependencies end -->
 		<dependency>
 			<groupId>org.apache.spark</groupId>
@@ -399,6 +412,40 @@
 						</configuration>
 					</execution>
 				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>aspectj-maven-plugin</artifactId>
+				<version>1.4</version>
+				<configuration>
+					<source>1.8</source>
+					<target>1.8</target>
+					<showWeaveInfo>true</showWeaveInfo>
+					<aspectDirectory>src/main/aspect</aspectDirectory>
+					<weaveDirectories>
+                  		<weaveDirectory>${project.build.directory}/classes</weaveDirectory>
+             		 </weaveDirectories>
+					<aspectLibraries>
+						<aspectLibrary>
+							<groupId>org.apache.shiro</groupId>
+							<artifactId>shiro-aspectj</artifactId>
+						</aspectLibrary>
+					</aspectLibraries>
+				</configuration>
+				<executions>
+					<execution>
+						<goals>
+                            <goal>compile</goal>       <!-- use this goal to weave all your main classes -->
+						</goals>
+					</execution>
+				</executions>
+				<dependencies>
+					<dependency>
+						<groupId>org.aspectj</groupId>
+						<artifactId>aspectjtools</artifactId>
+						<version>${aspectj.version}</version>
+					</dependency>
+				</dependencies>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
