ACU-616: Fixed issue. ACU-465 - Nullpointer in Querythrottling fixed
Former-commit-id: 50281adb7f04e22a43879bbb703e0958dfed8a37

--- a/war/pom.xml
+++ b/war/pom.xml
@@ -130,6 +130,8 @@
 									 <exclude>WEB-INF/lib/guava*.jar</exclude>
                                      <exclude>WEB-INF/lib/jasper-compiler*.jar</exclude>
                                      <exclude>WEB-INF/lib/jasper-runtime*.jar</exclude>
+                                     <exclude>WEB-INF/lib/xercesImpl*.jar</exclude>
+                                     <exclude>WEB-INF/lib/xml-apis*.jar</exclude>
                         </excludes>
                     </overlay>
                 </overlays>
