--- a/core/pom.xml
+++ b/core/pom.xml
@@ -157,7 +157,15 @@
 				<exclusion>
                         		<groupId>log4j</groupId>
                         		<artifactId>log4j</artifactId>
-                		</exclusion>
+                </exclusion>
+                <exclusion>
+                        <groupId>xerces</groupId>
+                        <artifactId>xercesImpl</artifactId>
+                 </exclusion>
+                 <exclusion>
+                        <groupId>xml-apis</groupId>
+                        <artifactId>xml-apis</artifactId>
+                 </exclusion>	
 			</exclusions>
 		</dependency>
 		<dependency>
