--- a/core/pom.xml
+++ b/core/pom.xml
@@ -155,6 +155,14 @@
                         		<groupId>log4j</groupId>
                         		<artifactId>log4j</artifactId>
                 		</exclusion>
+				<exclusion>
+					<groupId>xerces</groupId>
+					<artifactId>xercesImpl</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>xml-apis</groupId>
+					<artifactId>xml-apis</artifactId>
+				</exclusion>
 			</exclusions>
 		</dependency>
 		<dependency>
