ACU-520: Removed logback jars from war
Former-commit-id: bde6ac7749d9c27afa78761abb201192578d69e2

--- a/war/pom.xml
+++ b/war/pom.xml
@@ -132,6 +132,7 @@
                                      <exclude>WEB-INF/lib/jasper-runtime*.jar</exclude>
                                      <exclude>WEB-INF/lib/xercesImpl*.jar</exclude>
                                      <exclude>WEB-INF/lib/xml-apis*.jar</exclude>
+				     <exclude>WEB-INF/lib/logback-*.jar</exclude>
                         </excludes>
                     </overlay>
                 </overlays>
