ACU-634: Added support for using multiple threads for servMultiple
Former-commit-id: 4198c88f329adf3add6783e26e12dd5ebb92acaa

--- a/war/src/main/webapp/WEB-INF/web.xml
+++ b/war/src/main/webapp/WEB-INF/web.xml
@@ -137,6 +137,12 @@
     	<servlet-name>Aggregate</servlet-name>
     	<servlet-class>com.guavus.acume.core.servlet.AggregateRequestServlet</servlet-class>
   	</servlet>
+
+	<servlet>
+        <servlet-name>AggregateMultiple</servlet-name>
+        <servlet-class>com.guavus.acume.core.servlet.AggregateMultipleRequestServlet</servlet-class>
+        </servlet>
+
   	<servlet>
     	<servlet-name>Search</servlet-name>
     	<servlet-class>com.guavus.acume.core.servlet.SearchRequestServlet</servlet-class>
@@ -145,6 +151,12 @@
     	<servlet-name>TimeSeries</servlet-name>
     	<servlet-class>com.guavus.acume.core.servlet.TimeSeriesRequestServlet</servlet-class>
   	</servlet>
+
+	<servlet>
+        <servlet-name>TimeSeriesMultiple</servlet-name>
+        <servlet-class>com.guavus.acume.core.servlet.TimeSeriesMultipleRequestServlet</servlet-class>
+        </servlet>
+
   	<servlet>
     	<servlet-name>ValidateQuery</servlet-name>
     	<servlet-class>com.guavus.acume.core.servlet.ValidateQueryServlet</servlet-class>
@@ -174,6 +186,12 @@
     	<servlet-name>Aggregate</servlet-name>
 	<url-pattern>/queryresponse/aggregate</url-pattern>
   	</servlet-mapping>
+
+	<servlet-mapping>
+        <servlet-name>AggregateMultiple</servlet-name>
+        <url-pattern>/queryresponse/aggregatemultiple</url-pattern>
+        </servlet-mapping>
+
   	<servlet-mapping>
     	<servlet-name>Search</servlet-name>
 	<url-pattern>/queryresponse/search</url-pattern>
@@ -182,6 +200,12 @@
     	<servlet-name>TimeSeries</servlet-name>
 	<url-pattern>/queryresponse/timeseries</url-pattern>
   	</servlet-mapping>
+
+	<servlet-mapping>
+        <servlet-name>TimeSeriesMultiple</servlet-name>
+        <url-pattern>/queryresponse/timeseriesmultiple</url-pattern>
+        </servlet-mapping>
+
   	<servlet-mapping>
     	<servlet-name>ValidateQuery</servlet-name>
 	<url-pattern>/queryresponse/validQuery</url-pattern>
