--- a/war/src/main/resources/acume.conf
+++ b/war/src/main/resources/acume.conf
@@ -27,3 +27,4 @@ acume.core.classification.max.allowedQueries			$CLI_REPLACE_CLASSIFICATIONMAXALL
 acume.core.cache.base.directory					$CLI_REPLACE_CACHEBASEDIRECTORY$
 acume.core.cache.directory					$CLI_REPLACE_CACHEDIRECTORY$
 acume.core.cache.use.insta                                      $CLI_REPLACE_ACUMECORECACHEUSEINSTA$
+acume.core.thread.pool.size					$CLI_REPLACE_ACUMECORETHREADPOOLSIZE$
