--- a/core/pom.xml
+++ b/core/pom.xml
@@ -149,8 +149,16 @@
 				</exclusion>
 				<exclusion>
 					<groupId>ch.qos.logback</groupId>
-					<artifactId>logback-*</artifactId>
+					<artifactId>logback-access</artifactId>
 				</exclusion>
+				 <exclusion>
+                                        <groupId>ch.qos.logback</groupId>
+                                        <artifactId>logback-classic</artifactId>
+                                </exclusion>
+				 <exclusion>
+                                        <groupId>ch.qos.logback</groupId>
+                                        <artifactId>logback-core</artifactId>
+                                </exclusion>
 				<exclusion>
 					<groupId>org.apache.logging.log4j</groupId>
                         		<artifactId>log4j-core</artifactId>
