--- a/war/src/main/webapp/WEB-INF/web.xml
+++ b/war/src/main/webapp/WEB-INF/web.xml
@@ -2,7 +2,7 @@
 <!DOCTYPE web-app PUBLIC "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN" "http://java.sun.com/dtd/web-app_2_3.dtd">
 <web-app>
 
-	<!-- <distributable/>
+	<distributable/>
 	<display-name>BlazeDS</display-name>
 	<description>BlazeDS Application</description>
 
@@ -89,7 +89,7 @@
 		<filter-name>CacheControlFilter</filter-name>
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
- -->	<!-- servlet>
+	<!-- servlet>
 		<servlet-name>RGService</servlet-name>
 		<servlet-class>com.sun.jersey.spi.container.servlet.ServletContainer</servlet-class>
 		<init-param>
