ACU-658: Modified structure to get version from acume parent pom
Former-commit-id: 8f343fe723d1074bd95a432e6ca2a25ddc2cddac

--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,18 @@
 	<version>0.1-SNAPSHOT</version>
 	<packaging>pom</packaging>
    <name>Acume Project Parent POM</name>
+        <profiles>
+        <profile>
+        <id>acumeDefaultProfile</id>
+        <activation>
+           <activeByDefault>true</activeByDefault>
+        </activation>
+        <properties>
+        <pversion>0.1-SNAPSHOT</pversion>
+        <pudfversion>0.0.1-SNAPSHOT</pudfversion>
+        </properties>
+        </profile>
+        </profiles>
 
 	<modules>
 		<module>cache</module>
