--- a/core/pom.xml
+++ b/core/pom.xml
@@ -10,7 +10,6 @@
 	</parent>
 	<groupId>com.guavus.acume</groupId>
 	<artifactId>core</artifactId>
-	<version>0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<repositories>
@@ -42,12 +41,12 @@
 		<dependency>
 			<groupId>com.guavus.acume</groupId>
 			<artifactId>cache</artifactId>
-			<version>0.1-SNAPSHOT</version>
+			<version>${pversion}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.guavus</groupId>
 			<artifactId>search</artifactId>
-			<version>0.1-SNAPSHOT</version>
+			<version>${pversion}</version>
 			<exclusions>
 				<exclusion>
 					<groupId>org.apache.hive</groupId>
@@ -275,12 +274,12 @@
 		<dependency>
 			<groupId>com.guavus</groupId>
 			<artifactId>QueryBuilder</artifactId>
-			<version>0.1-SNAPSHOT</version>
+			<version>${pversion}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.guavus</groupId>
 			<artifactId>crux2.0</artifactId>
-			<version>0.1-SNAPSHOT</version>
+			<version>${pversion}</version>
 			<scope>provided</scope>
 			<exclusions>
 				<exclusion>
@@ -296,7 +295,7 @@
                 <dependency>
 			<groupId>com.guavus</groupId>
 			<artifactId>attvaludf</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
+			<version>${pudfversion}</version>
 		</dependency>
 	</dependencies>
 
