ACU-614: Enabling sessionSecurityManager by default
Former-commit-id: de77c90b6016bc3598f65d9316d91f3218b1d123

--- a/war/src/main/webapp/WEB-INF/web.xml
+++ b/war/src/main/webapp/WEB-INF/web.xml
@@ -45,7 +45,10 @@
 		<listener-class>flex.messaging.HttpFlexSession</listener-class>
 	</listener>
 
-
+	<context-param>
+    	<param-name>shiroEnvironmentClass</param-name>
+    	<param-value>com.guavus.rubix.user.shiro.StaticSecurityManagerIniWebEnvironment</param-value>
+	</context-param>
 
 	<servlet>
 		<servlet-name>MessageBrokerServlet</servlet-name>
